fixing issue with display of project imgs on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ h3 {
 }
 
 /* header */
-/header {
+.header {
     display: flex;
     justify-content: space-between;
     padding: 1em;
@@ -301,7 +301,6 @@ h3 {
 
 .my-projects {
     background-color: var(--clr-dark);
-    background-image: url(../img/SOMETHING HERE);
     background-size: cover;
     background-blend-mode: multiply;
     color: var(--clr-light);
@@ -532,4 +531,10 @@ a {
 .section__title section__title--projects {
     margin-bottom: 0px;
     padding: 0px;
+}
+
+@media (max-width: 600px) {
+    .project-thumbnail {
+        width: 300px;
+    }
 }
